the SmartTicket now only contains the name of the TicketType when being written: it retrieves at runtime the TicketType - added location for the Validator - now validates a ticket by removing the default credit

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -6,14 +6,14 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Height="457" Width="673">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Height="561" Width="986">
 
     <Grid>
-        <TextBlock HorizontalAlignment="Left" Height="91" Margin="28,27,0,0" Text="{x:Bind _viewModel.Ticket, Mode=OneWay}" TextWrapping="Wrap" VerticalAlignment="Top" Width="620"/>
-        <Button x:Name="btnValidateTicket" Content="Validate Ticket" Height="45" Margin="28,0,0,0" Width="233" Click="btnValidateTicket_Click" />
+        <TextBlock HorizontalAlignment="Left" Height="91" Margin="28,27,0,0" Text="{x:Bind _viewModel.Ticket, Mode=OneWay}" TextWrapping="Wrap" VerticalAlignment="Top" Width="916"/>
+        <Button x:Name="btnValidateTicket" Content="Validate Ticket" Height="45" Margin="28,343,0,0" Width="233" Click="btnValidateTicket_Click" VerticalAlignment="Top" />
         <Button x:Name="btnAddCredit" Content="Add credit" Height="45" Margin="28,143,0,0" VerticalAlignment="Top" Width="233" Click="btnAddCredit_Click" />
         <TextBox x:Name="txtboxCredit" HorizontalAlignment="Left" Height="45" Margin="286,143,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="bntReadTicket" Content="Read Ticket" Height="45" Margin="414,0,0,0" Width="233" Click="bntReadTicket_Click" />
-        <Button x:Name="btnResetTicket" Content="Reset Ticket" Height="45" Margin="414,143,0,0" Width="233" VerticalAlignment="Top" Click="btnResetTicket_Click" />
+        <Button x:Name="bntReadTicket" Content="Read Ticket" Height="45" Margin="28,208,0,0" Width="233" Click="bntReadTicket_Click" VerticalAlignment="Top" />
+        <Button x:Name="btnResetTicket" Content="Reset Ticket" Height="45" Margin="28,276,0,0" Width="233" VerticalAlignment="Top" Click="btnResetTicket_Click" />
     </Grid>
 </Page>
