--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -6,14 +6,48 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" Height="561" Width="1072">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" 
+    RequestedTheme="Dark">
+    <Page.Resources>
+        <local:ByteToStringConverter x:Key="byteconverter"/>
+        <Style TargetType="TextBlock">
+            <Setter Property="Padding" Value="20"></Setter>
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="Padding" Value="10"></Setter>
+            <Setter Property="Margin" Value="0, 0, 0, 15"></Setter>
+        </Style>
+    </Page.Resources>
+    <Grid Margin="0, 40, 0, 0">
+        <StackPanel Width="200" HorizontalAlignment="Left">
+            <TextBlock Text="UID biglietto" TextAlignment="Right" Margin="0, 3, 0, 0"></TextBlock>
+            <TextBlock Text="Credito €" TextAlignment="Right"></TextBlock>
+            <TextBlock Text="Tipo biglietto" TextAlignment="Right"></TextBlock>
+            <TextBlock Text="Validazione corrente" TextAlignment="Right"></TextBlock>
+            <TextBlock Text="Validazione della session" TextAlignment="Right"></TextBlock>
+            <TextBlock Text="Spesa della sessione €" TextAlignment="Right"></TextBlock>
+            <TextBlock Text="Data di utilizzo" TextAlignment="Right"></TextBlock>
+        </StackPanel>
 
-    <Grid>
-        <TextBlock HorizontalAlignment="Left" Height="91" Margin="28,27,0,0" Text="{x:Bind _viewModel.Ticket, Mode=OneWay}" TextWrapping="Wrap" VerticalAlignment="Top" Width="1003"/>
-        <Button x:Name="btnValidateTicket" Content="Validate Ticket" Height="45" Margin="28,343,0,0" Width="233" Click="btnValidateTicket_Click" VerticalAlignment="Top" />
-        <Button x:Name="btnAddCredit" Content="Add credit" Height="45" Margin="28,143,0,0" VerticalAlignment="Top" Width="233" Click="btnAddCredit_Click" />
-        <TextBox x:Name="txtboxCredit" HorizontalAlignment="Left" Height="45" Margin="286,143,0,0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="bntReadTicket" Content="Read Ticket" Height="45" Margin="28,208,0,0" Width="233" Click="bntReadTicket_Click" VerticalAlignment="Top" />
-        <Button x:Name="btnResetTicket" Content="Reset Ticket" Height="45" Margin="28,276,0,0" Width="233" VerticalAlignment="Top" Click="btnResetTicket_Click" />
+        <StackPanel Margin="200, 15, 0, 0" Width="200" HorizontalAlignment="Left">
+            <TextBox Text="{x:Bind _viewModel.Ticket.CardID, Mode=OneWay, Converter={StaticResource byteconverter}}" IsEnabled="False"></TextBox>
+            <TextBox Text="{x:Bind _viewModel.Ticket.Credit, Mode=OneWay}" IsEnabled="False"></TextBox>
+            <TextBox Text="{x:Bind _viewModel.Ticket.TicketTypeName, Mode=OneWay}" IsEnabled="False"></TextBox>
+            <TextBox Text="{x:Bind _viewModel.Ticket.CurrentValidation, Mode=OneWay}" IsEnabled="False"></TextBox>
+            <TextBox Text="{x:Bind _viewModel.Ticket.SessionValidation, Mode=OneWay}" IsEnabled="False"></TextBox>
+            <TextBox Text="{x:Bind _viewModel.Ticket.SessionExpense, Mode=OneWay}" IsEnabled="False"></TextBox>
+            <TextBox Text="{x:Bind _viewModel.Ticket.UsageTimestamp, Mode=OneWay}" IsEnabled="False"></TextBox>
+        </StackPanel>
+
+        <StackPanel Margin="450, 5, 0, 0">
+            <!--<TextBlock HorizontalAlignment="Left" Text="{x:Bind _viewModel.Ticket, Mode=OneWay}" TextWrapping="Wrap" VerticalAlignment="Top"/>-->
+            <Button x:Name="btnValidateTicket" Content="Oblitera biglietto" Height="45" Margin="0, 10, 0, 0" Width="233" Click="btnValidateTicket_Click" />
+            <Button x:Name="btnAddCredit" Content="Aggiungi credito" Height="45" Margin="0, 10, 0, 0"  VerticalAlignment="Top" Width="233" Click="btnAddCredit_Click" />
+            <Button x:Name="bntReadTicket" Content="Leggi biglietto" Height="45" Margin="0, 10, 0, 0" Width="233" Click="bntReadTicket_Click" VerticalAlignment="Top" />
+            <Button x:Name="btnResetTicket" Content="Resetta biglietto" Height="45" Margin="0, 10, 0, 0" Width="233" VerticalAlignment="Top" Click="btnResetTicket_Click" />
+        </StackPanel>
+        <StackPanel Margin="700, 0, 0, 0">
+            <TextBox x:Name="txtboxCredit" HorizontalAlignment="Left" Height="45" Margin="0, 70, 0, 0" Text="0" TextWrapping="Wrap" VerticalAlignment="Top" Width="75"/>
+        </StackPanel>
     </Grid>
 </Page>
